--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
 
     <h1>Subhash </h1>
+    <div>
+        <p>Subhash is a software engineer with a passion for coding and technology. He enjoys solving complex problems and is always eager to learn new skills.</p>
+        <ul>
+            <li>Programming Languages: Python, JavaScript, C++</li>
+            <li>Frameworks: React, Django</li>
+            <li>Interests: AI, Web Development, Open Source Contributions</li>
+        </ul>
+    </div>
     
 </body>
 </html>
