--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <li>Programming Languages: Python, JavaScript, C++</li>
             <li>Frameworks: React, Django</li>
             <li>Interests: AI, Web Development, Open Source Contributions</li>
+
+            <ul>
+                hello 
+            </ul>
         </ul>
     </div>
     
